{
    "name": "DefaultGameInputs",
    "maps": [
        {
            "name": "PlayerClimb",
            "id": "ce6e4d8d-030b-4262-a945-829adff260e4",
            "actions": [
                {
                    "name": "VerticalMovement",
                    "type": "Value",
                    "id": "48a9a45d-4ac9-43b3-a70b-44d0517b78d5",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "HorizontalMovement",
                    "type": "Value",
                    "id": "03d3ff72-e8eb-43cf-b3cf-59c0c9a4964a",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "JumpTransition",
                    "type": "Button",
                    "id": "ec63cbb2-eaed-4f50-ba4a-09b3757ffc7b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b47dfcb3-8d02-4290-a4f3-6f305ca105d7",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "JumpTransition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "AD",
                    "id": "3336ba56-8db5-4a2d-8db8-33a15b6828d7",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizontalMovement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "a05a96f1-57cd-40d1-a364-f1a9cae593b3",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizontalMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "7e738e85-4e14-4df9-b737-dc19621d800d",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizontalMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "WS",
                    "id": "7696bf3b-7295-40a0-aff3-2efc2d372c0a",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "VerticalMovement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "70264b69-659d-45a1-874d-2ef8cabbaf8c",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "VerticalMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "6836ea16-a38e-4db7-8170-09a5a5ebf653",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "VerticalMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "PlayerAirMovement",
            "id": "93657d13-d97d-4fa4-8edb-fb27822ca3f9",
            "actions": [
                {
                    "name": "HorizontalMovement",
                    "type": "Value",
                    "id": "3174bc4a-bace-4fd8-ba34-2aafc9429a95",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "AD",
                    "id": "9f43b72f-6547-47b2-92e6-0f6ab41e262f",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizontalMovement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "205007c5-d1e8-42c4-b874-38fc2365d9fb",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizontalMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "2e6b2de3-0185-4a1b-84dc-69d285d6204b",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizontalMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "PlayerGrounded",
            "id": "073f8a48-9e60-4929-9a57-fb954a989edc",
            "actions": [
                {
                    "name": "HorizontalMovement",
                    "type": "Value",
                    "id": "97e55b7f-6cfd-4a55-b8bb-f3ed25f64b91",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Run",
                    "type": "Button",
                    "id": "a7f0e20e-6da3-4764-aa73-d205f01772f3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "JumpTransition",
                    "type": "Button",
                    "id": "4653258e-a676-450a-979f-a34b66b7f920",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "0d276466-a7dd-463a-a9ad-ffd25a7b76b1",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "JumpTransition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c4433a70-ea5c-4b50-be89-fc2e77b79fad",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "AD",
                    "id": "f24b03b4-555f-4a16-835d-6c8305134ccd",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizontalMovement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "10ab76b5-97fb-41fe-9dc6-b4bf6d9de67b",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizontalMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "23f35874-995d-427d-a066-80378136ea64",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizontalMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "PlayerAttack",
            "id": "f6d699e4-01e1-4a77-a348-685bc262f2c1",
            "actions": [
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "c9671e7f-4e52-4669-bb27-3cc9e5fbadef",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2f8dbe01-0032-4f95-a200-e472042ffdfc",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "InGame",
            "id": "271a690a-bbd2-4a0e-82f5-809da44f8d72",
            "actions": [
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "e657150e-25bb-426f-9dd0-391387e92e5d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "0a832b4d-26d9-44e8-83cd-a9094c425a97",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "PauseUI",
            "id": "b0767589-3676-4640-ae34-4d0eff7ce1c7",
            "actions": [
                {
                    "name": "Resume",
                    "type": "Button",
                    "id": "b4a5b356-c9ec-4ce4-aa10-7d455d09ab97",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "5f11cd27-2a86-4224-b040-7265b4415d7c",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Resume",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}